--- a/src/Org.OpenAPITools/Dockerfile
+++ b/src/Org.OpenAPITools/Dockerfile
@@ -11,22 +11,22 @@ FROM mcr.microsoft.com/dotnet/core/sdk:8.0-buster AS build
 
 # Copy the code into the container
 WORKDIR /src
-COPY ["src/Org.OpenAPITools/Org.OpenAPITools.csproj", "Org.OpenAPITools/"]
+COPY ["src/NetFighter/NetFighter.csproj", "NetFighter/"]
 
 # NuGet restore
-RUN dotnet restore "Org.OpenAPITools/Org.OpenAPITools.csproj"
-COPY ["src/Org.OpenAPITools/", "Org.OpenAPITools/"]
+RUN dotnet restore "NetFighter/NetFighter.csproj"
+COPY ["src/NetFighter/", "NetFighter/"]
 
 # Build the API
-WORKDIR "Org.OpenAPITools"
-RUN dotnet build "Org.OpenAPITools.csproj" -c Release -o /app/build
+WORKDIR "NetFighter"
+RUN dotnet build "NetFighter.csproj" -c Release -o /app/build
 
 # Publish it
 FROM build AS publish
-RUN dotnet publish "Org.OpenAPITools.csproj" -c Release -o /app/publish
+RUN dotnet publish "NetFighter.csproj" -c Release -o /app/publish
 
 # Make the final image for publishing
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Org.OpenAPITools.dll"]
+ENTRYPOINT ["dotnet", "NetFighter.dll"]
